       TortoiseSVN hanging when accessing svn+ssh:// repositories. (Stefan)
- BUG: TSVNCache could end up in an endless loop and use all CPU if a working
       copy was placed in a root path, e.g., C:\ (Jacques Lemire)
- BUG: Crash when closing multiple log dialogs at once. (Stefan)
- BUG: Crash when updating/merging which resulted in a conflict. (Stefan)

Version 1.5.0
- CHG: Support for IPv6 disabled due to problems with merging and terrible
       slowdown in some situations. (Stefan)
- BUG: Styling URLs in the commit log edit control did not work properly if
       non ASCII chars were before an entered URL. (Stefan)
- BUG: the local hook scripts did not work, and the hook settings page
       could crash. (Stefan)
- BUG: When an URL was entered in the repository browser which points to a 
       different repository than the one which is currently shown, the
       project properties were not cleared. (Stefan)
- BUG: The whitespaces and lineending symbols in TortoiseMerge were not
       properly (re)drawn when scrolling sideways. (Stefan)
- BUG: The line endings were inline colored as different even if the
       line ending hasn't really changed. (Stefan)
- BUG: TortoiseIDiff could crash when an added icon was diffed against an
       empty icon. (Stefan)
- BUG: The MFC internal dialogs were not translated in TortoiseProc. (Stefan)
- BUG: The TortoiseBlame tab size was always initialized to 4 in the
       settings dialog. (Stefan)
- BUG: Opening the log dialog twice for the same repository caused the
       log cache to be deleted. (Stefan Fuhrmann)
- BUG: Merging with "dry run" ignored the options the user has set. (Stefan)
- BUG: OK button in copy, import and input dialog was disabled randomly 
       when tsvn:logminsize was not 0. (Stefan Fuhrmann)
- BUG: "show log" on a revision graph node would show the log for some
       sub-path of the respective branch instead for the branch itself
       (Stefan Fuhrmann)