@@ -33,7 +33,7 @@ bool MergeCommand::Execute()
 		CSVNProgressDlg progDlg;
 		progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Merge);
 		int options = wizard.m_bIgnoreAncestry ? ProgOptIgnoreAncestry : 0;
-		options |= wizard.bRecordOnly ? ProgOptRecordOnly : 0;
+		options |= wizard.m_bRecordOnly ? ProgOptRecordOnly : 0;
 		progDlg.SetOptions(options);
 		progDlg.SetPathList(CTSVNPathList(wizard.wcPath));
 		progDlg.SetUrl(wizard.URL1);
